--- a/style.css
+++ b/style.css
@@ -149,13 +149,11 @@
     background-color: rgba(211, 211, 211, 0.803);
     color: black;
     font-weight: bolder;
-    width: 450px;
+    width: 100%;
     text-align: center;
     display: flex;
     height: auto;
-    position: relative;
-    top: 50%;
-    left: 35%;
+    
     align-items: center;
     border-radius: 10px;
     
